<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/vatField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vat"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="2"
      >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/alcoholField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/alcohol"
          android:inputType="numberDecimal"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/volumeField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/volume"
          android:inputType="number"
          />
    </com.google.android.material.textfield.TextInputLayout>

  </LinearLayout>


</LinearLayout>
