<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wineCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    app:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/wineNameLbl"
        app:layout_constraintTop_toTopOf="@+id/wineNameLbl"
        tools:text="Test Wine"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineVatLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vat"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wineNameLbl"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineVat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/wineName"
        app:layout_constraintTop_toTopOf="@id/wineVatLbl"
        tools:text="Test Vat"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineAlcoholLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/alcohol"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/wineAlcohol"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineAlcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/wineAlcoholLbl"
        tools:text="2.0"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineVolumeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/wineAlcoholLbl"
        app:layout_constraintTop_toBottomOf="@id/wineAlcoholLbl"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wineVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/wineAlcohol"
        app:layout_constraintTop_toTopOf="@id/wineVolumeLbl"
        tools:text="2"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
