<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    >

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/wineRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toTopOf="@id/calculations"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0"
      tools:listitem="@layout/wine_layout"
      />

  <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
      android:id="@+id/calculations"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      app:contentPadding="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      card_view:cardCornerRadius="5dp"
      card_view:cardElevation="2dp"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/totalVolumeLbl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/totalVolume"
          android:textAllCaps="true"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/totalVolume"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          app:layout_constraintStart_toEndOf="@id/totalVolumeLbl"
          app:layout_constraintTop_toTopOf="@+id/totalVolumeLbl"
          tools:text="500"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/averageLbl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/average"
          android:textAllCaps="true"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/totalVolumeLbl"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/average"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="@id/totalVolume"
          app:layout_constraintTop_toTopOf="@id/averageLbl"
          tools:text="32.4"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/freezingWhiteLbl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/freezingWhite"
          android:textAllCaps="true"
          android:textStyle="bold"
          app:layout_constraintEnd_toStartOf="@id/freezingWhite"
          app:layout_constraintTop_toTopOf="parent"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/freezingWhite"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/freezingWhiteLbl"
          tools:text="2.0"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/freezingRedLbl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/freezingRed"
          android:textAllCaps="true"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="@id/freezingWhiteLbl"
          app:layout_constraintTop_toBottomOf="@id/freezingWhiteLbl"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/freezingRed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="@id/freezingWhite"
          app:layout_constraintTop_toTopOf="@id/freezingRedLbl"
          tools:text="2"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
